# phoenix-cxx

./: CMakeLists.txt
dep/: CMakeLists.txt
dep/glad/: CMakeLists.txt
dep/glad/include/glad/: glad.h
dep/glad/src/: glad.c
include/app/: app.hpp  app.hxx  appMain.hxx
include/error/: initError.hpp
include/graphics/: graphics.hpp  graphics.hxx
include/sdl/: README.md  display.hpp  glRenderer.hpp  initUtil.hpp  initVideo.hpp  renderer.hpp  sdlUtil.hpp  texture.hpp  window.hpp
src/: CMakeLists.txt  main.cxx
src/lib/App/: CMakeLists.txt  app.cxx  appMain.cxx
src/lib/Error/: CMakeLists.txt  initError.cxx
src/lib/Graphics/: CMakeLists.txt  graphics.cxx
src/lib/SDL/: CMakeLists.txt  sdlUtil.cxx
src/lib/SDL/Display/: CMakeLists.txt  display.cxx
src/lib/SDL/GLRenderer/: CMakeLists.txt  glRenderer.cxx
src/lib/SDL/InitUtil/: CMakeLists.txt  initUtil.cxx
src/lib/SDL/InitVideo/: CMakeLists.txt  initVideo.cxx
src/lib/SDL/Renderer/: CMakeLists.txt  renderer.cxx
src/lib/SDL/Texture/: CMakeLists.txt  texture.cxx
src/lib/SDL/Window/: CMakeLists.txt  window.cxx
src/lib/Util/: CMakeLists.txt
src/lib/World/: CMakeLists.txt
